--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -1,3 +1,10 @@
 .wy-side-nav-search {
-    background-color: red !important;
+    background-color: #69B3E7;
+}
+
+.wy-nav-content {
+    padding: 1.618em 3.236em;
+    height: 100%;
+    max-width: 95%;
+    margin: auto;
 }
