--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -5,6 +5,20 @@
 .wy-nav-content {
     padding: 1.618em 3.236em;
     height: 100%;
-    max-width: 100%;
+    max-width: 1050px;
     margin: auto;
+}
+
+.wy-menu-vertical header, .wy-menu-vertical p.caption {
+    height: 32px;
+    display: inline-block;
+    line-height: 32px;
+    padding: 0 1.618em;
+    margin-bottom: 0;
+    display: block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 80%;
+    color: #7c878e;
+    white-space: nowrap;
 }
