--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -42,6 +42,20 @@
     margin-bottom: 0.809em;
 }
 
+.wy-nav-side {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    padding-bottom: 2em;
+    width: 400px;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    min-height: 100%;
+    background: #343131;
+    z-index: 200;
+}
+
 .code-block-caption:hover .headerlink {
     display: inline-block;
 }
