--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -111,3 +111,17 @@ a:visited code,
     -moz-box-shadow: 0px 0px 4px 1px rgba(212,212,212,1);
     box-shadow: 0px 0px 4px 1px rgba(212,212,212,1);     
 }
+
+/* left hand menu colors  */
+.wy-menu-vertical li.current {
+    background-color: transparent;
+}
+
+.wy-menu-vertical li.current > a {
+    border: 0px;
+    background-color: transparent;
+    color: #69B3E7;
+}
+.toctree-l1:hover {
+    background-color: transparent;
+}
