--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -107,9 +107,9 @@ a:visited code,
 }
 
 .wy-nav-content-wrap {
-    -webkit-box-shadow: 0px 0px 4px 1px rgba(212,212,212,1);
-    -moz-box-shadow: 0px 0px 4px 1px rgba(212,212,212,1);
-    box-shadow: 0px 0px 4px 1px rgba(212,212,212,1);     
+    -webkit-box-shadow: 0px 0px 4px 1px rgba(181,181,181,1);
+    -moz-box-shadow: 0px 0px 4px 1px rgba(181,181,181,1);
+    box-shadow: 0px 0px 4px 1px rgba(181,181,181,1);     
 }
 
 /* left hand menu colors  */
@@ -122,6 +122,6 @@ a:visited code,
     background-color: transparent;
     color: #69B3E7;
 }
-.toctree-l1:hover {
+.toctree-l1:hover, .toctree-l1 a:hover {
     background-color: transparent;
 }
