--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -137,6 +137,15 @@ a:visited code,
 }
 
 .wy-side-nav-search > a:before {
-    content: https://robo3d.com/wp-content/uploads/2016/09/robo-logo-1.png;
+    content: url('https://robo3d.com/wp-content/uploads/2016/09/robo-logo-1.png');
     display: block;
+}
+.wy-side-nav-search > div.version {
+    color: #999;
+}
+
+/* top nav bar  */
+.wy-breadcrumbs {
+    margin-left: -300px;
+    background-color: #ffb81c;
 }
