--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -44,7 +44,7 @@
 
 .wy-nav-side {
     position: fixed;
-    top: 80px;
+    top: 62px;
     bottom: 0;
     left: 0;
     padding-bottom: 2em;
@@ -144,7 +144,7 @@ a:visited code,
     color: #999;
 }
 
-/* top nav bar  */
+/* top/bottom nav bar  */
 .wy-breadcrumbs {
     max-width: 1200px;
     margin: auto;
@@ -166,4 +166,15 @@ a:visited code,
 
 .rst-footer-buttons {
     top: unset !important;
+    padding: 14px 0;
+    bottom: 0px;
+    z-index: 1000;
+}
+.btn-neutral {
+    background-color: #ffb81c !important;
+    box-shadow: 0px;
+    border: 0px;
+}
+.rst-versions {
+    bottom: 62px;
 }
