--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -124,28 +124,28 @@ a:visited code,
 .wy-menu-vertical li.current a {
     border: 0px;
     background-color: transparent;
-    color: #69B3E7;
+    color: #ffb81c;
 }
 
 .toctree-l1:hover, .toctree-l1 a:hover {
     background-color: transparent;
-    color: #69B3E7;
+    color: #ffb81c;
 }
 
 .wy-menu-vertical li.on a:hover {
     background-color: transparent;
-    color: #69B3E7;
+    color: #ffb81c;
 }
 
 .wy-side-nav-search > a {
-    color: #69B3E7;
+    color: #ffb81c;
 }
-/*
+
 .wy-side-nav-search > a:before {
-    content: url('https://robo3d.com/wp-content/uploads/2016/09/robo-logo-1.png');
+    content: url('https://robo3d.com/wp-content/uploads/2016/12/robo-logo-1.png');
     display: block;
 }
-*/
+
 .wy-side-nav-search > div.version {
     color: #999;
 }
@@ -198,7 +198,7 @@ a:visited code,
 }
 
 .btn-neutral:hover {
-    background-color: transparent;
+    background-color: transparent !important;
 }
 
 .rst-versions {
