--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -123,7 +123,7 @@ a:visited code,
 
 .wy-menu-vertical li.current a {
     border: 0px;
-    background-color: transparent;
+    background-color: transparent !important;
     color: #ffb81c;
 }
 
@@ -148,6 +148,19 @@ a:visited code,
 
 .wy-side-nav-search > div.version {
     color: #999;
+}
+
+.wy-side-nav-search input[type="text"] {
+    border-color: rgba(0,0,0,.20);
+    border-radius: 5px;
+}
+
+.wy-menu-vertical ul {
+    padding-top: 20px;
+}
+
+.wy-menu:before {
+    content: url('https://robo3d.com/wp-content/uploads/2016/12/rule.jpg');
 }
 
 /* top/bottom nav bar  */
@@ -188,6 +201,10 @@ a:visited code,
     padding: 14px 0;
     bottom: 0px;
     z-index: 1000;
+}
+
+footer {
+    margin-bottom: 62px;
 }
 
 .btn-neutral {
