--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -119,6 +119,11 @@ a:visited code,
 
 .wy-menu-vertical a {
     color: #404040;
+    padding: 14.5px 1.618em;
+}
+
+.wy-menu-vertical li.on a {
+    padding: 14.5px 1.618em;
 }
 
 .wy-menu-vertical li.current a {
@@ -156,7 +161,7 @@ a:visited code,
 }
 
 .wy-menu-vertical ul {
-    padding-top: 20px 0;
+    padding: 20px 0;
 }
 
 .wy-menu:before {
