--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -78,6 +78,10 @@ code,
     color: #000 !important;
 }
 
+a {
+    color: #ffb81c;
+}
+
 a code,
 .rst-content a tt {
     color: #2980B9 !important;
@@ -158,10 +162,6 @@ a:visited code,
 .wy-side-nav-search input[type="text"] {
     border-color: rgba(0,0,0,.20);
     border-radius: 5px;
-}
-
-.wy-menu-vertical ul {
-    padding: 20px 0;
 }
 
 .wy-menu:before {
