--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -138,7 +138,7 @@ a:visited code,
 
 .toctree-l1:hover, .toctree-l1 a:hover {
     background-color: transparent;
-    color: #ffb81c;
+    color: #009cde;
 }
 
 .wy-menu-vertical li.on a:hover {
@@ -174,6 +174,18 @@ a:visited code,
 
 .wy-menu ul {
     padding-top: 13px;
+}
+.wy-menu-vertical li.current ul {
+    border-left: 2px solid #009cde;
+    margin-left: 27px;
+    padding-top: 0px;
+}
+.wy-menu-vertical li.current ul a {
+    padding-left: 8px;
+    color: rgb(64, 64, 64);
+}
+.wy-menu-vertical li.toctree-l2.current > a {
+    color: #009cde;
 }
 
 /* top/bottom nav bar  */
