--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -1,4 +1,4 @@
-/* override table width restrictions */
+/* *********************OVERRIDE TABLE WIDTH RESTRICTIONS********************* */
 .wy-table-responsive table td, .wy-table-responsive table th {
     /* !important prevents the common CSS stylesheets from
        overriding this as on RTD they are loaded after this stylesheet */
@@ -9,7 +9,7 @@
     overflow: visible !important;
 }
 
-/* style headlink for code block captions like other headlinks */
+/* *********************STYLE HEADLINK FOR CODEBLOCK CAPTIONS LIKE OTHER HEADLINKS********************* */
 .code-block-caption .headerlink {
     display: none;
     visibility: hidden;
@@ -67,12 +67,12 @@
     display: inline-block;
 }
 
-/* make whitespace visualization in code listings not appear on same vertical position as dashes */
+/* *********************MAKE WHITESPACE VISUALIZATION IN CODE LISTING NOT APPEAR ON SAME VERTCAL POSITION AS DASHES********************* */
 .highlight .w {
     vertical-align: 10%;
 }
 
-/* make code tags non-red again */
+/* MAKE CODE TAGS NON-RED AGAIN */
 code,
 .rst-content tt {
     color: #000 !important;
@@ -92,7 +92,7 @@ a:visited code,
     color: #9B59B6 !important;
 }
 
-/* change to centered layout rather than left justified */
+/* *********************CHANGE TO CENTERD LAYOUT RATHER THAN LEFT JUSTIFIED********************* */
 .wy-body-for-nav {
     background-color: #f2f2f2;
     background-image: none;
@@ -116,7 +116,7 @@ a:visited code,
     box-shadow: 0px 0px 4px 1px rgba(181,181,181,1);     
 }
 
-/* left hand menu  */
+/* *********************LEFT HAND MENU*********************  */
 .wy-menu-vertical li.current {
     background-color: transparent;
 }
@@ -200,7 +200,7 @@ a:visited code,
     color: #009cde;
 }
 
-/* top/bottom nav bar  */
+/* *********************TOP/BOTTOM NAV BAR*********************  */
 .wy-breadcrumbs {
     max-width: 1200px;
     margin: auto;
@@ -261,4 +261,17 @@ footer {
 
 .fa-arrow-circle-right, .fa-arrow-circle-left {
     color: #ffffff;
+}
+
+/* *********************RESPONSIVE STYLE*********************  */
+@media screen and (max-width: 768px) {
+    .wy-nav-content div[role="navigation"] {
+        top: 63px;
+    }
+    .wy-nav-top {
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+
 }
