--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -279,7 +279,7 @@ footer {
     .wy-nav-side.shift {
         display: inherit;
     }
-    .shift.wy-nav-content div[role="navigation"] {
+    .shift div[role="navigation"] {
         left: 85%;
     }
 }
