--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -290,4 +290,10 @@ footer {
     .wy-nav-top {
         background-color: #ffb81c;
     }
+    .wy-breadcrumbs {
+        color: #ffb81c; 
+    }
+    .wy-breadcrumbs a {
+        color: #ffb81c; 
+    }
 }
