--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -117,6 +117,10 @@ a:visited code,
 }
 
 /* *********************LEFT HAND MENU*********************  */
+.wy-menu-vertical {
+ margin-bottom:62px;   
+}
+}
 .wy-menu-vertical li.current {
     background-color: transparent;
 }
