--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -268,10 +268,10 @@ footer {
 
 /* *********************MAIN CONTENT*********************  */
 h2 {
-   padding-top: 82px !impportant; 
+   padding-top: 82px !important; 
 }
 .section {
-    margin-bottom: -58px !impportant;
+    margin-bottom: -58px !important;
 }
 
 /* *********************RESPONSIVE STYLE*********************  */
