--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -285,6 +285,7 @@ footer {
         top: 63px;
         background-color: #ffebc0;
         color: #ffb81c; 
+        display: none;
     }
     .wy-nav-top {
         position: fixed;
