--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -241,7 +241,7 @@ a:visited code,
     padding: 14px 0;
     bottom: 0px;
     z-index: 1000;
-    display: none;
+    display: none !important;
 }
 
 footer {
