Revert "fixed merge issue"
This reverts commit ff747310b6b126a3897ec5be05b384396e572691, reversing
changes made to 63f722d6e2bfe769b6f38e3879ca9f7701360414.

--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -117,9 +117,6 @@ a:visited code,
 }
 
 /* *********************LEFT HAND MENU*********************  */
-.wy-menu-vertical {
-     margin-bottom:120px;
-}
 .wy-menu-vertical li.current {
     background-color: transparent;
 }
@@ -241,7 +238,6 @@ a:visited code,
     padding: 14px 0;
     bottom: 0px;
     z-index: 1000;
-    display: none !important;
 }
 
 footer {
@@ -259,23 +255,14 @@ footer {
     background-color: transparent !important;
 }
 
+.rst-versions {
+    bottom: 62px;
+}
+
 .fa-arrow-circle-right, .fa-arrow-circle-left {
     color: #ffffff;
 }
 
-/* *********************MAIN CONTENT*********************  */
-h2 {
-   padding-top: 82px !important; 
-}
-#enter-the-robolution h1, #make-more-with-robo-c2 h1, #make-smarter-with-the-robo-app h1, #logging-into-your-robo-account h1 {
-   padding-top: 82px !important; 
-}
-.section {
-    margin-bottom: -58px !important; 
-}
-footer {
-    margin-top: 82px;
-}
 /* *********************RESPONSIVE STYLE*********************  */
 @media screen and (max-width: 768px) {
     .wy-nav-content div[role="navigation"] {
@@ -298,6 +285,9 @@ footer {
     .shift div[role="navigation"] {
         left: 85%;
     }
+    .rst-versions {
+        bottom: 0px;
+    }
     .wy-nav-top {
         background-color: #ffb81c;
     }
@@ -312,7 +302,6 @@ footer {
     }
     .rst-footer-buttons {
         background-color: #ffb81c !important;
-        display: none;
     }
     .fa-bars:before {
         line-height: 1.8;
