--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -177,6 +177,10 @@ a:visited code,
     padding-top: 13px;
 }
 
+.wy-menu-vertical {
+    margin-bottom: 82px !important;
+}
+
 .wy-menu-vertical li.current ul {
     border-left: 2px solid #009cde;
     margin: 0px 0 10px 27px;
@@ -196,8 +200,16 @@ a:visited code,
     padding: 10px 24px 10px 12px;
 }
 
+.wy-menu-vertical li.toctree-l2.current li.toctree-l3 > a {
+    padding: 10px 24px 10px 12px;
+}
+
 .wy-menu-vertical li.current ul a:hover {
     color: #009cde;
+}
+
+a span.toctree-expand {
+    display: none;
 }
 
 /* *********************TOP/BOTTOM NAV BAR*********************  */
