remove ads from menu

--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -211,6 +211,9 @@ a:visited code,
 a span.toctree-expand {
     display: none !important;
 }
+.rst-pro {
+    display: none !important;
+}
 
 /* *********************TOP/BOTTOM NAV BAR*********************  */
 .wy-breadcrumbs {
